--- a/index.html
+++ b/index.html
@@ -5,16 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        img {
+            height: 250px;
+            width: auto;
+        }
+    </style>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">lasagna</a></li>
-        <li><a href="./recipes/hotdogs.html">hotdogs</a></li>
-        <li><a href="./recipes/grilledsandwich.html">grilled sandwiches</a></li>
+    <ul class="recipe-list">
+        <li><img src="images/LasagnaRecipe.jpg" alt="Lasagna"><br><a href="./recipes/lasagna.html">lasagna</a></li>
+        <li><img src="images/Hotdogs.jpg" alt="Hotdogs"><br><a href="./recipes/hotdogs.html">hotdogs</a></li>
+        <li><img src="images/sandwich.jpg" alt="Grilled sandwiches" style="width: 300px;"><br><a href="./recipes/grilledsandwich.html">grilled sandwiches</a></li>
     </ul>
-
+    
 </body>
 
 </html>
