--- a/recipes/grilledsandwich.html
+++ b/recipes/grilledsandwich.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipes</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Recipes</title>
+<link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Grilles Sandwiches Recipe</h1>
-    <img src="../images/sandwich.jpg" alt="Grilled Sandwiches">
-    <h2>Ingredients</h2>
-    <ul>
-        <li>4 slices white bread</li>
-        <li>3 tablespoons butter, divided</li>
-        <li>2 slices Cheddar cheese</li>
-    </ul>
-    <h2>Steps</h2>
-    <ol>
-        <li>Preheat a nonstick skillet over medium heat. Generously butter one side of a slice of bread. Place bread butter-side down in the hot skillet; add 1 slice of cheese. Butter a second slice of bread on one side and place butter-side up on top of cheese.</li>
-        <li>Cook until lightly browned on one side; flip over and continue cooking until cheese is melted. Repeat with remaining 2 slices of bread, butter, and slice of cheese.</li>
-    </ol>
-</body>
-</html>
+<body class="contents">
+<h1>Lasagna Recipe</h1>
+<img src="../images/LasagnaRecipe.jpg" alt="lasagna">
+<h2>Ingredients</h2>
+<ul>
+<ul class="contents">
+    <li>mince</li>
+    <li>onion</li>
+    <li>tomato sauce</li>
+@@ -18,7 +19,7 @@ <h2>Ingredients</h2>
+    <li>spices and seasoning</li>
+</ul>
+<h2>Steps</h2>
+<ol>
+<ol class="contents">
+    <li>Make the meat sauce</li>
+    <li>Cook the noodles</li>
+    <li>Make the ricotta mixture</li>
