--- a/recipes/hotdogs.html
+++ b/recipes/hotdogs.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../style.css">    
 </head>
 <body>
+<body class="contents">
     <h1>Hotdogs Recipe</h1>
     <img src="../images/Hotdogs.jpg" alt="Hotdogs">
     <h2>Ingredients</h2>
