--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+<body class="contents">
     <h1>Lasagna Recipe</h1>
     <img src="../images/LasagnaRecipe.jpg" alt="lasagna">
     <h2>Ingredients</h2>
     <ul>
+    <ul class="contents">
         <li>mince</li>
         <li>onion</li>
         <li>tomato sauce</li>
-        <li>lasagna noodles</li>
-        <li>cheese</li>
+@@ -18,7 +19,7 @@ <h2>Ingredients</h2>
         <li>spices and seasoning</li>
     </ul>
     <h2>Steps</h2>
     <ol>
+    <ol class="contents">
         <li>Make the meat sauce</li>
         <li>Cook the noodles</li>
         <li>Make the ricotta mixture</li>
