--- a/recipes/hotdogs.html
+++ b/recipes/hotdogs.html
@@ -13,7 +13,7 @@
     <h2>Ingredients</h2>
     <ul>
         <li>4 hot dog buns</li>
-        <li>4 hot dogs</li>
+        <li>4 hot dog sausages</li>
     </ul>
     <h2>Steps</h2>
     <ol>
